--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head> 
 <style>
 h2, p, h1 {  color: #e6ac00;  text-transform: uppercase;  font-family: monospace;} 
-img{  width:250px}
-div{  width:49%;  display: inline-block;}
-body{  background:black}
-h1,.header-info{  width:100%;  text-align:center}
+img {  width:250px;}
+div {  width:49%;  display: inline-block;}
+body {  background:black;}
+h1,.header-info {  width:100%;  text-align:center;}
 </style>
 <title>Urban fashion</title> 
 </head>  <body> 
