--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html> 
 <head> 
 
-<title>Urban fashion</title> 
+<title>Urban fashions</title> 
 <style>
 header-info {  width:100%;  text-align:center;}
 h1 {  width:100%;  text-align:center;}
