--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html> 
 <head> 
 
-<title>Urban fashions</title> 
+<title>Urban fashion</title> 
 <style>
 header-info {  width:100%;  text-align:center;}
 h1 {  width:100%;  text-align:center;}
 </style>
 </head> 
 <body> 
-<h1>Urban fashion</h1>    
+<h1>Urban fashions</h1>    
 <p class="header-info">Bringing you the latest fashion trends and new realeses. </p>    
 <div>      
   <h2>trending</h2>   
