--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <title>Urban fashion</title> 
 <style>
-header-info {  width:100%;  text-align:center;}
-h1 {  width:100%;  text-align:center;}
+.header-info {  width:100%;  text-align:center;}
+h1 {  width:100%;  text-align:center; color: gold;}
 </style>
 </head> 
 <body> 
