--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <title>Urban fashion</title> 
 <style>
-.header-info {  width:100%;  text-align:center;}
-h1 {  width:100%;  text-align:center; color: gold;}
+
+h2, p, h1 {  color: #e6ac00;  text-transform: uppercase;  font-family: monospace;} 
+img{  width:250px}div{  width:49%;  display: inline-block;}
+body{  background:black}
+h1,.header-info{  width:100%;  text-align:center}
 </style>
 </head> 
 <body> 
