--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <title>Urban fashion</title> 
 <style>
 
-h2, p, h1 {  color: #e6ac00;  text-transform: uppercase;  font-family: monospace;} 
-img{  width:250px}div{  width:49%;  display: inline-block;}
+h2 {  color: #e6ac00;  text-transform: uppercase;  font-family: monospace;} 
+h1 {  color: #e6ac00;  text-transform: uppercase;  font-family: monospace;  width:100%;  text-align:center}
+p{  color: #e6ac00;  text-transform: uppercase;  font-family: monospace;}
+img{  width:250px}
+div{  width:49%;  display: inline-block;}
 body{  background:black}
-h1,.header-info{  width:100%;  text-align:center}
+.header-info{  width:100%;  text-align:center}
 </style>
 </head> 
 <body> 
