--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body{  background:black}
 </style>
 </head> 
 <body> 
-<h1>Urban fashions</h1>    
+<h1>Urban fashion</h1>    
 <p class="header-info">Bringing you the latest fashion trends and new realeses. </p>    
 <div>      
   <h2>trending</h2>   
