--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
 <title>Urban fashion</title> 
 <style>
 
-h2 {  color: #e6ac00;  text-transform: uppercase;  font-family: monospace;} 
-h1 {  color: #e6ac00;  text-transform: uppercase;  font-family: monospace;  width:100%;  text-align:center}
-p {  color: #e6ac00;  text-transform: uppercase;  font-family: monospace;}
+h2 { 
+color: gold;  
+text-transform: uppercase; 
+font-family: monospace;} 
+h1 { 
+color:gold;  
+text-transform: uppercase;  
+font-family: monospace;  
+width:100%;  
+text-align:center
+}
+p {  
+color: #e6ac00;  
+text-transform: uppercase; 
+font-family: monospace;
+}
 
 </style>
 </head> 
