--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ font-family: monospace;
 </style>
 </head> 
 <body> 
-<h1>Urban fashion</h1>    
+<h1>Urban fashions</h1>    
 <p class="header-info">Bringing you the latest fashion trends and new realeses. </p>    
 <div>      
   <h2>trending</h2>   
