--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 h2 { 
 color: gold;  
 text-transform: uppercase; 
-font-family: monospace;} 
+font-family: monospace;
+} 
 h1 { 
 color:gold;  
 text-transform: uppercase;  
